# fzy

./: .gitignore  BENCH.md  CODE.md  CORELIBBENCH.md  Cargo.toml  FEATURES-TO-SHIP.md  FRAMEWORK.md  PERF.md  PLAN.md  README.md  USAGE.md  compiler-internals-visual-guide.html  fzl-showcase.html  gate-shrink.trace.fozzy  gate-shrink.trace.min.fozzy  memory-sitrep.trace.fozzy  tmp_zed_test.fzy
apps/fozzyc/: Cargo.toml
apps/live_server/: Cargo.toml
apps/live_server/src/: main.rs
apps/live_server/tests/: http_live.rs
corelib/: fozzy.toml
crates/driver/: Cargo.toml
crates/driver/src/: cli_output.rs  command.rs  lib.rs  lsp.rs  pipeline.rs
crates/driver/src/command/: interop.rs  source.rs  trace_native.rs
crates/driver/src/pipeline/: clif_support.rs  linker_support.rs  llvm_support.rs  native_backend_support.rs  native_metadata.rs  native_runtime_support.rs  native_runtime_tables.rs  tests.rs
crates/driver/src/pipeline/native_runtime_support/: ffi_exports.rs  import_usage.rs  runtime_shim.rs
crates/driver/src/pipeline/native_runtime_support/runtime_shim/: build.rs  core.rs  http.rs  proc.rs  render.rs  services.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: abi.rs  alloc.rs  bytes.rs  c.rs  capability.rs  collections.rs  concurrency.rs  core.rs  deploy.rs  durability.rs  duration.rs  encoding.rs  error.rs  fs.rs  http.rs  io.rs  lib.rs  net.rs  observability.rs  path.rs  process.rs  resultx.rs  rng.rs  security.rs  sync_atomic.rs  task.rs  test.rs  text.rs  time.rs
docs/: abi-policy-v0.md  abi-policy-v1.md  allocator-contracts-v1.md  c-interop-cookbook-v1.md  c-interop-production-v1.md  compiler-diagnostics-v1.md  compiler-diagnostics-v2.md  compiler-foundation-v0.md  compiler-foundation-v1.md  control-flow-lowering-contract.md  dependency-locking-v0.md  dependency-locking-v1.md  ecosystem-guidance-v1.md  editor-tooling-v1.md  exit-criteria-v1.md  fzweb-v1.md  language-primitive-baseline-v1.md  language-reference-v0.md  language-reference-v1.md  language-stability-v1.md  memory-unsoundness-process-v1.md  operational-insights-v1.md  production-failure-triage-v1.md  production-memory-model-v1.md  production-workflow-v1.md  project-conventions-v0.md  project-conventions-v1.md  runtime-networking-v0.md  runtime-networking-v1.md  safe-profile-v0.md  safe-profile-v1.md  stdlib-v0.md  stdlib-v1.md  system-safety-trust-model-v1.md  traits-generics-contract-v1.md  traits-generics-style-guide-v1.md  unsafe-contract-authoring-v1.md  workspace-policy-v1.md
examples/: code.md  missing_cap.fzy  smoke.fzy  usage.md
policy/: rust_unsafe_islands.json
release/: exit_criteria_state.json
scripts/: bench_corelibs_rust_vs_fzy.py  bench_fzweb.py  c_ffi_matrix.sh  determinism_flake_budget_gate.py  direct_memory_architecture_gate.py  direct_memory_perf_gate.py  exit_criteria.py  exit_criteria_gate.sh  fozzy_diagnostics_gate.sh  fozzy_production_gate.sh  language_primitive_drift_gate.py  lsp_determinism_smoke.sh  lsp_editor_smoke.sh  runtime_corelib_execution_path_gate.py  rust_unsafe_inventory.py  safety_claim_integrity_gate.py  ship_release_gate.sh  traits_generics_gate.py  unsafe_ffi_stress.sh  verify_corelibs_bench_matrix.py  verify_fzweb_framework.py
tests/: INIT_GUIDE.md  c_ffi_matrix.pass.fozzy.json  corelibs.bench_matrix.pass.fozzy.json  explore_schedule_faults.pass.fozzy.json  fuzz.inputs.pass.fozzy.json  fzweb.framework.pass.fozzy.json  host.backends_run.pass.fozzy.json  host.pass.fozzy.json  live.e2e.fozzy.json  live.server.internet.fozzy.json  live_server.http.pass.fozzy.json  memory.graph_diff_top.pass.fozzy.json  pedantic.alloc.crates_stdlib.explore_schedule_faults.pass.fozzy.json  pedantic.alloc.crates_stdlib.fuzz_inputs.pass.fozzy.json  pedantic.alloc.crates_stdlib.memory_graph_diff_top.pass.fozzy.json  (+99 more)
(+206 files in other folders)
