[package]
name = "live_server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ctrlc = "3"
capabilities = { path = "../../crates/capabilities" }
runtime = { path = "../../crates/runtime" }
stdlib = { path = "../../crates/stdlib" }
