[package]
name = "driver"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
ast = { path = "../ast" }
parser = { path = "../parser" }
hir = { path = "../hir" }
fir = { path = "../fir" }
verifier = { path = "../verifier" }
session = { path = "../session" }
manifest = { path = "../manifest" }
diagnostics = { path = "../diagnostics" }
runtime = { path = "../runtime" }
formatter = { path = "../formatter" }
sha2 = "0.10"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"

[dev-dependencies]
anyhow.workspace = true
