[package]
name = "stdlib"
version.workspace = true
edition.workspace = true

[dependencies]
core = { path = "../core" }
wait-timeout = "0.2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
rand_distr = "0.4"
rand_xoshiro = "0.6"
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }
socket2 = "0.5"
